tools/tests/ui/fail/l1010.cnf
// Test file for error code: L1010
// Expected error: Invalid Mismatch character in variable declaration -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
